--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -2,6 +2,7 @@
 \usepackage{report}
 \usepackage[acronym]{glossaries}
 \usepackage{rotating}
+\usepackage{float}
 \title{Major Project Report}
 \author{Miran Ghimire}
 \date{\today}
@@ -22,8 +23,8 @@
 \newpage
 {
   \setlength{\parskip}{0em}
-  \renewcommand\contentsname{TABLE OF CONTENT} % This will change heading text
-  \tableofcontents \addcontentsline{toc}{section}{TABLE OF CONTENT}
+  \renewcommand\contentsname{TABLE OF CONTENTS} % This will change heading text
+  \tableofcontents \addcontentsline{toc}{section}{TABLE OF CONTENTS}
 }
 
 
@@ -35,7 +36,7 @@
 % List of tables
 
 \newpage
-\listoftables \addcontentsline{toc}{section}{LIST OF TABLE}
+\listoftables \addcontentsline{toc}{section}{LIST OF TABLES}
 
 
 %\input{sec/logistic-regression}
