--- a/major_project_report/sec/appendix.tex
+++ b/major_project_report/sec/appendix.tex
@@ -1,7 +1,7 @@
 % Appendix page
 \newpage
 \section*{Appendix A}
-\addcontentsline{toc}{section}{Abstract}
+\addcontentsline{toc}{section}{APPENDIX}
 
 \begin{figure}[h]
   \centering
