--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -1,7 +1,7 @@
 \newpage
 \pagenumbering{arabic}
 \section{INTRODUCTION}
-On the Internet, where the number of choices is overwhelming, there is need to filter, prioritize and efficiently deliver relevant information in order to alleviate the problem of information overload, which has created a potential problem to many Internet users. Recommender systems solve this problem by searching through large volume of dynamically generated information to provide users with personalized content and services. 
+On the Internet, where the number of choices is overwhelming, there is need to filter, prioritize and efficiently deliver relevant information in order to alleviate the problem of information overload, which has created a potential problem to many Internet users. Recommender systems solve this problem by searching through large volume of dynamically generated information to provide users with personalized content and services.
 
 Besides, these days social networks have become widely used and popular mediums for information dissemination as well as the facilitators of social interactions. User contribution and activities provide a valuable insight into individual behavior, experiences, opinions and interests.Considering that personality, which uniquely identifies each one of us, affects a lot of aspects of human behavior, mental process and affective reactions, there is an enormous opportunities, for adding new personality based qualities in order to enhance the current collaborative filtering recommendation engine.
 
@@ -47,8 +47,8 @@ Some sample items used by person with this traits are:
 \end{itemize}
 \end{enumerate}
 \subsection{Motivation}
-The growth in the amount of digital information and the number of users in the Internet have created a potential challenge of information overload which hinders timely access to items of interest on the Internet. Thus there has been increased in the demand for the best recommender system more than ever before. And music is essential to many of our lives. We listen to it when waking up, while in transit at work, and with our friends. For many, music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times and alleviate our worries. Hence music is much more than mere entertainment, but as stated earlier, growth in the amount of digital information have created a potential challenge of information overload where a recommendation engine plays a very crucial role in filtering the vital fragment out of large amount of dynamically generated information according to user's preferences, interest or observed behavior about item. 
-Hence,with this project, we attempt to devise a method to improve the collaborative filtering engine via the use of personality in order to compute the similar user's for the recommendation of music as it is believed, person with similar personality has similar taste in music. 
+The growth in the amount of digital information and the number of users in the Internet have created a potential challenge of information overload which hinders timely access to items of interest on the Internet. Thus there has been increased in the demand for the best recommender system more than ever before. And music is essential to many of our lives. We listen to it when waking up, while in transit at work, and with our friends. For many, music is like a constant companion. It can bring us joy and motivate us, accompany us through difficult times and alleviate our worries. Hence music is much more than mere entertainment, but as stated earlier, growth in the amount of digital information have created a potential challenge of information overload where a recommendation engine plays a very crucial role in filtering the vital fragment out of large amount of dynamically generated information according to user's preferences, interest or observed behavior about item.
+Hence,with this project, we attempt to devise a method to improve the collaborative filtering engine via the use of personality in order to compute the similar user's for the recommendation of music as it is believed, person with similar personality has similar taste in music.
 
 \subsection{Objectives}
 The objectives of the project can be summarized with the points below:
@@ -69,13 +69,14 @@ Nowadays, digital data on the Internet has been massive than ever, which have cr
 \subsection{Organization of the Report}
 The organization of the report is done in the following ways:
 \begin{enumerate}
-\item Chapter 1: It includes the introduction about the problem and the method we are trying to employ to solve. 
+\item Chapter 1: It includes the introduction about the problem and the method we are trying to employ to solve.
 \item Chapter 2: It includes Literature Review which includes the works related to the project and the notable works prevailing prior to this project development with their results.
 \item Chapter 3: It includes the theoretical background for the development of the project.
 \item Chapter 4: It includes methodology used for the development of the project.
 \item Chapter 5: It includes system design techniques along with the use case, activity diagram used for the development of the system.
-\item Chapter 6: It includes the system analysis, which briefly explains about the functional and non-functional requirements of the system.
-\item Chapter 7: It includes tools and technologies used for the development of the system.
-\item Chapter 8: It includes the analysis and the result of the experiment we tried in the project.
-\item Chapter 9: It includes the conclusion and future enhancements techniques.
+% \item Chapter 6: It includes the system analysis, which briefly explains about the functional and non-functional requirements of the system.
+\item Chapter 6: It includes tools and technologies used for the development of the system.
+\item Chapter 7: It includes the analysis and the result of the experiment we tried in the project.
+\item Chapter 8: It includes the limitation and future enhancements of the project.
+\item Chapter 9: It describes the conclusion of the project.
 \end{enumerate}
