--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -18,27 +18,30 @@ The non-functional requirement of the system can be summarized as follows:
 \item Capacity and Scalability: The system shall be able to store personality computed by the system into the database.
 \item Availability: The system shall be available to user anytime whenever there is an Internet connection.
 \item Recovery: In case of malfunctioning or unavailability of server, the system should be able to recover and prevent any data loss or redundancy.
-\item Flexibility and Portability: System shall be accessible anytime from any locations. 
+\item Flexibility and Portability: System shall be accessible anytime from any locations.
 \end{itemize}
 \subsection{Feasibility Assessment}
-Feasibility Assessment is done to analyze the viability of an idea. In case of software development, it performs the practicality of the project or system. The result from feasibility assessment determines whether the project should go ahead, be redesigned, or dropped. There are 
+Feasibility Assessment is done to analyze the viability of an idea. In case of software development, it performs the practicality of the project or system. The result from feasibility assessment determines whether the project should go ahead, be redesigned, or dropped. There are
 five areas of feasibility - Technical, Economic, Legal, Operational ans Scheduling.
 
 \subsubsection{Operational Feasibility}
+
 The operational feasibility analysis gives the description about how the system operates and what resources do the system requires for performing its designated task. Being closely related to data analysis and integration, the system requires to be easily operable for different uses and operations like new data entry, concurrent use of system should be fluent consuming minimum cost and resources.
+System to designed is operationally feasible as the system can be operated with the resource as of personal computer i.e browser. The project is developed as the website allows the easy access to the multiple  users. Beisdes the analysis task performed by the subsystem is also operationally feasible.
 
 \subsubsection{Technical Feasibility}
 Technical Feasibility Assessment examines whether the proposed system can actually be designed to solve the desired problems and requirements using available technologies in the given problem domain. The system is said to be feasible technically if it can be deployable, operable and manageable under current technological context of our country
-
+Since the system aims to enhance the existing collaborative engines, via the use of personality and as the data set for the personality is avialable and the building a classifier is also feasible, the project can be considered technically feasible.
 
 \subsubsection{Economic Feasibility}
 Economic Feasibility checks whether the cost required for complete system development is feasible using at he available resources in hand. It should be noted that the cost of resources and overall cost of deployment of system should be kept minimum while operational and maintenance cost for the system should be within the capacity of organization.
+Since the system is hosted on Heroku cloud hosting service which is free of cost for limited use, the system can be considered economically feasible for the developement.
 
 \subsubsection{Legal Feasibility}
-Legal Feasibility assessment checks the system for any conflicts with legal requirement, regulations that are to be followed as per the standard maintained by the governing body. As such, the system that is being developed must comply with all the legal boundaries such as copyright violation, authorize use of licenses and other. This prevent any future conflicts for the system and also provide legal basis for the system in future if any other tries to use part of or full system without necessary permission and documents
+Legal Feasibility assessment checks the system for any conflicts with legal requirement, regulations that are to be followed as per the standard maintained by the governing body. As such, the system that is being developed must comply with all the legal boundaries such as copyright violation, authorize use of licenses and other. This prevent any future conflicts for the system and also provide legal basis for the system in future if any other tries to use part of or full system without necessary permission and documents. The data obtained from the social media of the user is being consented by the user and doesn't does violate any other obligation of law and privacy, project can be considered legally feasible.
 
 \subsubsection{Scheduling Feasibility}
-Any project is considered fail if it is not completed on time. so, Scheduling Feasibility estimates the time require fro the system to fully develop and whether that time feasible or not according to current trend in market. If the project takes longer time to complete, it may be outdated or some other may launch the similar system before our system is complete. So, it is required to fix the deadline for any project and the system should be out and operative before specified deadline.
+Any project is considered fail if it is not completed on time. so, Scheduling Feasibility estimates the time require fro the system to fully develop and whether that time feasible or not according to current trend in market. If the project takes longer time to complete, it may be outdated or some other may launch the similar system before our system is complete. So, it is required to fix the deadline for any project and the system should be out and operative before specified deadline. As the scheduling of the project is in consistent with the available time of the project, project can be considered scheduling feasibile.
 
 \subsection{Software Development Approach}
 The developed system, being huge and dynamic nature, may not be developed efficiently and timely procured with the traditional development approaches like waterfall. Thus to meet the requirements of the system and ensuring the timely delivery and adaptability for changing requirement, Scrum methodology under the Agile Development method is chosen for the development of system.
@@ -50,7 +53,7 @@ The developed system, being huge and dynamic nature, may not be developed effici
 \caption{scrum software development cycle}
 \label{fig:scrum}
 \end{figure}
-Scrum is an agile way to manage project. Agile software development with Scrum is often perceived as a methodology, but rather than viewing Scrum as methodology, it is often thought as a framework for managing a process. In the agile Scrum world, instead of providing complete, detailed descriptions of how everything is to be done on a project,much of it is left up to Scrum software development team. This is because the team will know best how to solve the problem they are presented. It relies on a self-organizing, cross-functional team. The scrum team is self-organizing in that there is no overall team leader who decides which person will do which task or how a problem will be solved. This is the issue that are decided by the team as a whole. Besides the team is cross functional, because of which everyone is needed to take a feature from idea to implementation. 
+Scrum is an agile way to manage project. Agile software development with Scrum is often perceived as a methodology, but rather than viewing Scrum as methodology, it is often thought as a framework for managing a process. In the agile Scrum world, instead of providing complete, detailed descriptions of how everything is to be done on a project,much of it is left up to Scrum software development team. This is because the team will know best how to solve the problem they are presented. It relies on a self-organizing, cross-functional team. The scrum team is self-organizing in that there is no overall team leader who decides which person will do which task or how a problem will be solved. This is the issue that are decided by the team as a whole. Besides the team is cross functional, because of which everyone is needed to take a feature from idea to implementation.
 
 This model suggests that projects progress via a series of sprints. In keeping with an agile methodology, sprints are time boxed to no more than a month long, most commonly two weeks. It advocates for planning meeting at the start of the sprint, where team members figure out how many items they can commit to and then create a sprint backlog, a list of task to perform during the sprint. During an agile Scrum sprint, the Scrum team takes a small set of features from idea to coded and tested functionality. At the end, these features are coded, tested and integrated into the evolving product or system.
 
