--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -1,14 +1,14 @@
 
 \newpage
 \phantomsection
-\addcontentsline{toc}{section}{References}
+\addcontentsline{toc}{section}{REFERENCES}
 \begin{thebibliography}{9}
 	\bibitem{dataset}
 		myPersonality DataSet \url{ http://mypersonality.org/wiki/doku.php}
-	
+
  \bibitem{fivefactormodel}
 	 Five Factor Model of Personality: Goldberg LR, et al.(2006) \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
- 
+
  \bibitem{tupes}
  E. Tupes and R. Christal Recurrent personality factors based on trait ratings.(1992) \textit{Journal of Personality}, 60(2): 225251.
 
