--- a/major_project_report/sec/result.tex
+++ b/major_project_report/sec/result.tex
@@ -22,13 +22,13 @@ We analyzed the effect of number of iterations on the f-measure of the logistic 
 The followings tables show the confusion matrix of Naive Bayes for Big Five Personality classes:
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&4 & 11 \\ 
+ Actual:Yes&4 & 11 \\
  \hline
- Actual:No&12 & 23 \\ 
+ Actual:No&12 & 23 \\
  \hline
 \end{tabular}
 \caption{Confusion matrix of Logistic Regression Model (Openness)}
@@ -37,13 +37,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&6 & 18 \\ 
+ Actual:Yes&6 & 18 \\
  \hline
- Actual:No&11 & 15 \\ 
+ Actual:No&11 & 15 \\
  \hline
 \end{tabular}
 \caption{Confusion matrix of Logistic Regression Model (Conscientiousness)}
@@ -51,13 +51,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&22 & 9 \\ 
+ Actual:Yes&22 & 9 \\
  \hline
- Actual:No&12 & 7 \\ 
+ Actual:No&12 & 7 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Logistic Regression Model (Extraversion)}
@@ -65,33 +65,34 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&9 & 14 \\ 
+ Actual:Yes&9 & 14 \\
  \hline
- Actual:No&14 & 13 \\ 
+ Actual:No&14 & 13 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Logistic Regression Model (Agreeableness)}
 \end{table}
 
-\begin{table}[!ht]
+\begin{table}[!h]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&16 & 14 \\ 
+ Actual:Yes&16 & 14 \\
  \hline
- Actual:No&12 & 8 \\ 
+ Actual:No&12 & 8 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Logistic Regression Model (Neuroticism)}
 \end{table}
 
 
+\cleardoublepage
 \subsection{Naive Bayes Model}
 The following figure shows f-measure of the naive bayes model for Big Five Personality classes:
 \begin{figure}[!ht]
@@ -104,13 +105,13 @@ The following figure shows f-measure of the naive bayes model for Big Five Perso
 The followings tables show the confusion matrix of Naive Bayes for Big Five Personality classes:
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&3 & 12 \\ 
+ Actual:Yes&3 & 12 \\
  \hline
- Actual:No&8 & 27 \\ 
+ Actual:No&8 & 27 \\
  \hline
 \end{tabular}
 \caption{Confusion matrix of Naive Bayes (Openness)}
@@ -119,13 +120,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&9 & 15 \\ 
+ Actual:Yes&9 & 15 \\
  \hline
- Actual:No&4 & 22 \\ 
+ Actual:No&4 & 22 \\
  \hline
 \end{tabular}
 \caption{Confusion matrix of Naive Bayes (Conscientiousness)}
@@ -133,13 +134,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&20 & 11 \\ 
+ Actual:Yes&20 & 11 \\
  \hline
- Actual:No&12 & 7 \\ 
+ Actual:No&12 & 7 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Naive Bayes (Extraversion)}
@@ -147,13 +148,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&12 & 11 \\ 
+ Actual:Yes&12 & 11 \\
  \hline
- Actual:No&13 & 14 \\ 
+ Actual:No&13 & 14 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Naive Bayes (Agreeableness)}
@@ -161,13 +162,13 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 
 \begin{table}[!ht]
 \centering
-\begin{tabular}{ |c|c|c| } 
+\begin{tabular}{ |c|c|c| }
  \hline
  N =50 & Predicted:Yes & Predicted: No \\
  \hline
- Actual:Yes&20 & 10 \\ 
+ Actual:Yes&20 & 10 \\
  \hline
- Actual:No&15 & 5 \\ 
+ Actual:No&15 & 5 \\
  \hline
 \end{tabular}
  \caption{Confusion matrix of Naive Bayes (Neuroticism)}
