final hola sayed

--- a/major_project_report/report.sty
+++ b/major_project_report/report.sty
@@ -38,8 +38,8 @@
 \lfoot{}
 \cfoot{}
 \rfoot{}
-\setlength{\voffset}{-0.35in}
-\setlength{\headsep}{50pt}
+%\setlength{\voffset}{-0.35in}
+%\setlength{\headsep}{50pt}
 %\fancyheadoffset[R]{-2cm}
 % Section numbering format
 
