--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -107,7 +107,7 @@ The figure given below is the data flow diagram of the project showing the flow 
 It is the level-1 dfd, with the two entities User and Admin. User is responsible for log in, view personality and view recommended music, all of which takes data from the user and recommendation store, to provide a data to the user. Besides admin is responsible for creating and altering models(classifier,recommender,database) all of which are reflected within the user and recommendation store.
 
 \subsection{Front End of the System(User Interface)}
-User Interface is one of the major part of the system. It is where a user will login through their Facebook id in order to experience the personalized based music listening. User is able to able to view his personality via the website and also view the detailed description about the personality traits. Personality classification and music recommendation are all performed in the backend of the system.
+User Interface is one of the major part of the system. It is where a user will login through their Facebook id in order to experience the personalized based music listening. User is able to able to view his/her recommended music as well as personality via the website and also view the detailed description about the personality traits. Personality classification and music recommendation are all performed in the backend of the system.
 
 % Following are the snapshots of our system UI:
 % \begin{figure}[!ht]
