--- a/major_project_report/sec/tools_technologies.tex
+++ b/major_project_report/sec/tools_technologies.tex
@@ -12,6 +12,11 @@ Django is a free and open-source web framework, written in Python, which follows
 \subsection{Pandas}
 Pandas is a software library written for the Python programming language for data manipulation and analysis. In particular, it offers data structures and operations for manipulating numerical tables and time series. It offers wide range of features including DataFrame object for data manipulation with integrated indexing, tools for reading and writing data between in-memory data structures and different file formats, data alignment and integrated handling of missing data and more.
 
+\subsection{NLTK}
+NLTK is a leading platform for building Python programs to work with human language data. It provides easy-to-use interfaces to over 50 corpora and lexical resources such as WordNet, along with a suite of text processing libraries for classification, tokenization, stemming, tagging, parsing, and semantic reasoning, wrappers for industrial-strength NLP libraries, and an active discussion forum.
+Natural Language Processing with Python provides a practical introduction to programming for language processing.
+
+
 \subsection{Facebook Platform}
 Facebook Platform is an umbrella term used to describe the set of services, tools, and products provided by the social networking service Facebook for third-party developers to create their own applications and services that access data in Facebook. The Graph API is the core of Facebook Platform, enabling developers to read from and write data into Facebook.
 
@@ -24,3 +29,6 @@ Cascading Style Sheets (CSS) is a style sheet language used for describing the p
 
 \subsection{PostgreSQL}
 PostgreSQL is an object-relational database management system (ORDBMS) with an emphasis on extensibility and standards compliance. As a database server, its primary functions are to store data securely and return that data in response to requests from other software applications. It can handle workloads ranging from small single-machine applications to large Internet-facing applications (or for data warehousing) with many concurrent users. PostgreSQL is ACID-compliant and transactional. PostgreSQL has updatable views and materialized views, triggers, foreign keys; supports functions and stored procedures, and other expandability.
+
+\subsection{Git}
+Git is a version control system (VCS) for tracking changes in computer files and coordinating work on those files among multiple people. It is primarily used for source code management in software development, but it can be used to keep track of changes in any set of files. As a distributed revision control system it is aimed at speed, data integrity, and support for distributed, non-linear workflows.
